[gd_scene load_steps=12 format=2]

[ext_resource path="res://pauseMenu/settings.png" type="Texture" id=1]
[ext_resource path="res://pauseMenu/exitPress.png" type="Texture" id=2]
[ext_resource path="res://pauseMenu/continuePress.png" type="Texture" id=3]
[ext_resource path="res://pauseMenu/exit.png" type="Texture" id=4]
[ext_resource path="res://pauseMenu/continue.png" type="Texture" id=5]
[ext_resource path="res://pauseMenu/settingsPress.png" type="Texture" id=6]
[ext_resource path="res://pauseMenu/background.jpg" type="Texture" id=7]
[ext_resource path="res://pauseMenu/fullscreen.png" type="Texture" id=8]
[ext_resource path="res://pauseMenu/backPress.png" type="Texture" id=9]
[ext_resource path="res://pauseMenu/back.png" type="Texture" id=10]
[ext_resource path="res://pauseMenu/pauseMenu.gd" type="Script" id=11]

[node name="PauseMenu" type="MarginContainer"]
pause_mode = 2
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_right = 1024.0
margin_bottom = 600.0

[node name="background" type="TextureRect" parent="CenterContainer"]
margin_left = 205.0
margin_top = 120.0
margin_right = 819.0
margin_bottom = 480.0
texture = ExtResource( 7 )

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer/background"]
margin_right = 614.0
margin_bottom = 361.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pause" type="VBoxContainer" parent="CenterContainer/background/CenterContainer"]
margin_left = 133.0
margin_top = 70.0
margin_right = 481.0
margin_bottom = 290.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 40
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Continue" type="TextureButton" parent="CenterContainer/background/CenterContainer/Pause"]
margin_right = 348.0
margin_bottom = 45.0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/background/CenterContainer/Pause"]
margin_top = 85.0
margin_right = 348.0
margin_bottom = 220.0
custom_constants/separation = 30

[node name="Settings" type="TextureButton" parent="CenterContainer/background/CenterContainer/Pause/VBoxContainer"]
margin_right = 348.0
margin_bottom = 59.0
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 6 )

[node name="MainMenu" type="TextureButton" parent="CenterContainer/background/CenterContainer/Pause/VBoxContainer"]
margin_top = 89.0
margin_right = 348.0
margin_bottom = 135.0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 2 )

[node name="Settings" type="VBoxContainer" parent="CenterContainer/background/CenterContainer"]
visible = false
margin_left = 307.0
margin_top = 180.0
margin_right = 307.0
margin_bottom = 180.0

[node name="Sprite" type="Sprite" parent="CenterContainer/background/CenterContainer/Settings"]

[node name="TextureRect" type="TextureRect" parent="CenterContainer/background/CenterContainer/Settings/Sprite"]
margin_left = -256.0
margin_top = -44.0
margin_right = 190.0
margin_bottom = 2.0
texture = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckBox" type="CheckBox" parent="CenterContainer/background/CenterContainer/Settings/Sprite/TextureRect"]
anchor_left = -0.18
anchor_top = -3.3
anchor_right = 1.191
anchor_bottom = 4.452
margin_left = 536.036
margin_top = 142.318
margin_right = -51.4297
margin_bottom = -190.274
rect_scale = Vector2( 3, 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite2" type="Sprite" parent="CenterContainer/background/CenterContainer/Settings"]

[node name="backSettings" type="TextureButton" parent="CenterContainer/background/CenterContainer/Settings/Sprite2"]
margin_left = -256.0
margin_top = 92.0
margin_right = -129.0
margin_bottom = 141.0
texture_normal = ExtResource( 10 )
texture_pressed = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="CenterContainer/background/CenterContainer/Pause/Continue" to="." method="_on_Continue_pressed"]
[connection signal="pressed" from="CenterContainer/background/CenterContainer/Pause/VBoxContainer/Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="CenterContainer/background/CenterContainer/Pause/VBoxContainer/MainMenu" to="." method="_on_MainMenu_pressed"]
[connection signal="pressed" from="CenterContainer/background/CenterContainer/Settings/Sprite/TextureRect/CheckBox" to="." method="_on_CheckBox_pressed"]
[connection signal="pressed" from="CenterContainer/background/CenterContainer/Settings/Sprite2/backSettings" to="." method="_on_backSettings_pressed"]
